# hello-pkg

./: README.md  pyproject.toml  setup.py
hellopkg/: __init__.py  cli.py
